Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -250,6 +250,8 @@ We obtain a very strong sensitivity to initial conditions, as the distribution o
 
 We now check the sensitivity in terms of qualitative behavior of phase diagrams. We show the phase diagrams for two very opposite morphologies in term of sprawling, but controlling for aggregation with the same $PC2$ value. These correspond to the green and blue frames in Fig.~\ref{fig:sugarscape-distance}. The behaviors are rather stable for varying $s_+$, what means that the poorest agents have a determinant role in trajectories. The two examples have not only a very distant baseline inequality (the ceil of the first 0.35 is roughly the floor of the second 0.3), but their qualitative behavior is also radically opposite: the sprawled configuration gives inequalities decreasing as population decreases and decreasing as minimal wealth increases, whereas the concentrated one gives inequalities strongly increasing as population decreases and also decreasing with minimal weights but significantly only for large population values. The process is thus completely inverted, what would have significant impacts if one tried to schematize policies from this model. This second example confirms thus the importance of sensitivity of simulation models to the initial spatial conditions.
 
+\comment{Ajouter un paragraphe sur le lien entre forme de grille et comportement du modèle/résultats.}
+
 %%%%%%%%%%%%%%%%%%%%%%
 \section{Discussion}
 %%%%%%%%%%%%%%%%%%%%%%
@@ -260,7 +262,7 @@ We now check the sensitivity in terms of qualitative behavior of phase diagrams.
 
 \comment[MLT]{Au-delà de l'outil NetLogo, parler de la formalisation de l'espace par les physiciens qui a influencé les modèles en géographie (cf: commentaire de Florent que je propose de bouger ici)?}
 
-\comment[FLN]{opportunity for social science to emancipate from the very strong hypotheses of physicists that have become standards (homogeneity and isotropy of space), even though they are never valid in social systems.} \comment[MLT]{Du coup, ça je le garderais plutôt pour la discussion, à moins que l'on avance des références explicites mais je crois que la sous-section d'après explicite assez bien ce besoin.}
+\comment[FLN]{opportunity for social science to emancipate from the very strong hypotheses of physicists that have become standards (homogeneity and isotropy of space), even though they are never valid in social systems.} 
 
 \comment[CC]{Lancer des pistes sur comment travailler l'effet de la grille pour d'autres types de modélisation type modèles appliqués.}
 
