--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,33 @@
+
+
+
+
+@article{ligmann2013spatially,
+  title={Spatially-explicit sensitivity analysis of an agent-based model of land use change},
+  author={Ligmann-Zielinska, Arika},
+  journal={International Journal of Geographical Information Science},
+  volume={27},
+  number={9},
+  pages={1764--1781},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+
+
+@article{alizadeh2016generating,
+  title={Generating and analyzing spatial social networks},
+  author={Alizadeh, Meysam and Cioffi-Revilla, Claudio and Crooks, Andrew},
+  journal={Computational and Mathematical Organization Theory},
+  pages={1--29},
+  year={2016},
+  publisher={Springer}
+}
+
+
+
+
+
 @article{zembri2010new,
 	Author = {Zembri, Pierre},
 	Title = {The new purposes of the French high-speed rail system in the framework of a centralized network: a substitute to the domestic air transport market?},
