--- a/paper.tex
+++ b/paper.tex
@@ -103,6 +103,8 @@ The effect of the spatial configuration on area-based attributes of human behavi
 
 \textbf{Spatial system shape, precision, and boundaries:} \citet{FlacheHegselmann2001} show that chances for random emergence of a stable cluster of similar agents in a Schelling-like model are highest in a rectangular grid and lowest in a hexagonal grid and that an irregular (Voronoi-diagram) city lattice structure favours migration stabilisation around decentralised clusters of similar agents. \citet{Banos2012} compares the behaviour of Schelling segregation model on city lattices formalized as either grid, random, scale-free and Sierpinski networks and concludes that the presence of cliques in graph-based urban structures favor segregationist behaviours. \citet{LeTexierCaruso2017} simulate an individual-based dynamic model where agents move and exchange coins across regions. Using a set of different theoretical spatial systems, they demonstrate the impact of the regularity and aggregation levels, or centrality/periphery effects, on spatial diffusion dynamics.
 
+%\cite{ligmann2013spatially}
+
 \textbf{Spatial heterogeneity:} \citet{StaufferSolomon2007} introduce asymetric interactions and empty residences in Schelling's model run on a large and regular lattice. They reveal conjoint and non-linear effects on the vacancy rates and tolerance levels on segregation patterns. \citet{Gauvinetal2010} run Schelling's segregation process in an open city-lattice to study how the variations in tolerance levels, vacancy rates and city attractiveness may create lines of vacancy lots between clusters of agents. They conclude on the functional role of vacancies, which allow weakly tolerant agents to live and be satisfied in a city environment they nevertheless perceive as hostile. \citet{HatnaBenenson2012} show that their model replications run on a 50x50 torus with 2\% of empty cells were not sensitive to the initial patterns (random and fully segregated distribution of agents).
 
 \textbf{Combination:} \citet{Singhetal2009} show that the segregation patterns obtained by Schelling for certain tolerance values are strictly a small city phenomenon (8x8 city-lattice) and do not work for a larger spatial lattice (100x100), where segregation appears only for certain combinaisons of tolerance threshold and vacancy density values. 
@@ -267,6 +269,9 @@ We now check the sensitivity in terms of qualitative behavior of phase diagrams.
 \comment[CC]{Lancer des pistes sur comment travailler l'effet de la grille pour d'autres types de modélisation type modèles appliqués.}
 
 \comment[MLT]{Mise à disposition des grilles générées? D'un échantillon?}
+
+
+Ref Clem : \cite{alizadeh2016generating} génération de réseau spatiaux / données synthétiques
 
 \paragraph{Comparing phase diagrams}
 
